# news-to-trade-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml
agents/: backtest.py  execution.py  llm.py  news_analyst.py  portfolio_manager.py  screener.py
agents/debate/: __init__.py  bear.py  bull.py  risk.py
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/state/: route.ts
dashboard/components/: Cursor.tsx  EquityCurve.tsx  Intro.tsx  TickerLogo.tsx
dashboard/lib/: db.ts  demo-state.json
data/: alpaca_client.py  universe.py
db/: models.py
graph/: pipeline.py
memory/: ruvector_client.py
scripts/: seed_demo.py
tests/: test_agents.py  test_pipeline.py  test_screener.py
