[project]
name = "news-trade-agent"
version = "0.1.0"
description = "Multi-agent news-to-trade pipeline: S&P 500 screener, LLM debate swarm, Alpaca paper trading"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "alpaca-py>=0.33",
    "sqlalchemy>=2.0",
    "pandas>=2.2",
    "httpx>=0.27",
    "lxml>=5.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["agents", "agents.debate", "data", "db", "graph", "memory"]
